projects/vb6parse/snapshots/syntax/statements/file_operations/put/put_binary_file.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/put.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OpenStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OpenKeyword
                  text: Open
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"binary.bin\""
                - kind: Whitespace
                  text: " "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: KeywordClause
                  children:
                    - kind: BinaryKeyword
                      text: Binary
                - kind: Whitespace
                  text: " "
                - kind: ExpressionClause
                  children:
                    - kind: AsKeyword
                      text: As
                    - kind: Whitespace
                      text: " "
                    - kind: IdentifierExpression
                      children:
                        - kind: Octothorpe
                          text: "#"
                        - kind: IntegerLiteral
                          text: "1"
            - kind: Newline
              text: "\n"
            - kind: PutStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PutKeyword
                  text: Put
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: byteArray
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children: []
                            - kind: RightParenthesis
                              text: )
            - kind: Newline
              text: "\n"
            - kind: CloseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: CloseKeyword
                  text: Close
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Octothorpe
                              text: "#"
                            - kind: IntegerLiteral
                              text: "1"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
